--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,37 @@ typer = "^0.13.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.10.0"
+mkdocs = "^1.6.1"
+mkdocstrings = {extras = ["python"], version = "^0.27.0"}
+isort = "^5.13.2"
+flake8 = "^7.1.1"
+mypy = "^1.13.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 88
+exclude = '''
+/(
+      .eggs         
+    | .git          
+    | .hg
+    | .mypy_cache
+    | .tox
+    | venv
+    | _build
+    | buck-out
+    | build
+    | dist
+  )/
+'''
+
+[tool.isort]
+profile = "black"
+line_length = 88
+multi_line_output = 3
+include_trailing_comma = true
+virtual_env = "venv"
+
